style.css
* {
    margin: 0;
    padding: 0;
}

.profilePic {
    border-radius: 50px;
}

body {
    background-color: hsl(0, 7%, 94%);
    font-family: 'Barlow Semi Condensed', sans-serif;
    Font-size: 13px;
    font-weight: 500;
}

img {
    float: left;
    /*margin: 10px*/;
}

footer {
    grid-area: footer;
}
.attribution {
    font-size: 11px;
    text-align: center;
    color: black;
}

.attribution a {
    color: hsl(228, 45%, 44%);
}

.container {
    display: grid;
    grid-template-areas:
    "left main right"
    "left footer right";
    grid-template-columns: 0.5fr 8fr 0.5fr;
    grid-template-rows: 8fr 0.5fr;
}

.main {
    grid-area: main;
    max-width: 1440px;
    max-height: 800px;
    display: grid;
    justify-self: center;
    grid-template-areas: "topmain sidemain"
    "bottommain sidemain";
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr 1fr;
    padding-top: 150px;
    padding-bottom: 150px;
}

.profile {
    display: grid;
    grid-template-areas: "picture words"
    "picture wordsbottom";
    grid-template-columns: 0.2fr 2fr;
    grid-template-rows: 1fr 1fr;
}

.profileName {
    grid-area: words;
    display: inline-block;
}

.profileInfo {
    grid-area: wordsbottom;
    opacity: 50%;
}

.profilePic {
    max-width: 30px;
    grid-area: picture;
    border: solid;
    border-color: rgba(255, 255, 255, 0.3);
}

.profile p {
    padding-left: 10px;
}

.sideMain {
    grid-area: sidemain;
    background-color: hsl(0,0%,100%);
    color: hsl(219, 29%, 14%);
    max-width: 250px;
    padding: 20px;
    border-radius: 15px;
    margin: 10px;
}

.topMain {
    grid-area: topmain;
    display: grid;
    grid-template-areas: "lefttop righttop";
    grid-template-columns: 2fr 1fr;
    margin: 10px;
}

.leftTop {
    grid-area: lefttop;
    color: hsl(0, 0%, 100%);
    background-color: hsl(263, 55%, 52%);
    margin-right: 10px;
    border-radius: 15px;
    padding: 20px;
    background-image: url('/images/bg-pattern-quotation.svg');
    background-repeat: no-repeat;
    background-position: right top;
}

.rightTop {
    grid-area: righttop;
    max-width: 250px;
    color: hsl(0, 0%, 100%);
    background-color: hsl(217, 19%, 35%);
    margin-left: 10px;
    border-radius: 15px;
    padding: 20px;
}

.bottomMain {
    grid-area: bottommain;
    display: grid;
    grid-template-areas: "bottomleft bottomright";
    grid-template-columns: 1fr 2fr;
    margin: 10px;
}


.leftBottom {
    grid-area: bottomleft;
    color: hsl(219, 29%, 14%);
    background-color: hsl(0, 0%, 100%);
    margin-right: 10px;
    border-radius: 15px;
    padding: 20px;
}

.rightBottom {
    grid-area: bottomright;
    color: hsl(0, 0%, 100%);
    background-color: hsl(219, 29%, 14%);
    margin-left: 10px;
    border-radius: 15px;
    padding: 20px;
}

.testimonial {
    opacity: 50%;
}

@media screen and (max-width: 1000px) {

    .main {
        display: table-column;
        max-width: 375px;
        padding-top: 50px;
        padding-bottom: 50px;
        }

    .sideMain {
        display: inline-block;
        justify-self: center;
        background-color: hsl(0, 0%, 100%);
        color: hsl(219, 29%, 14%);
        max-width: 250px;
        border-radius: 15px;
        margin: 5px;
        }

    .topMain {
        display: inline-block;
        }


    .leftTop {
        display: inline-block;
        justify-self: center;
        color: hsl(0, 0%, 100%);
        background-color: hsl(263, 55%, 52%);
        border-radius: 15px;
        max-width: 250px;
        background-image: url('/images/bg-pattern-quotation.svg');
        background-repeat: no-repeat;
        background-position: right top;
        margin: 5px;
        }
    
    .rightTop {
        display: inline-block;
        color: hsl(0, 0%, 100%);
        background-color: hsl(217, 19%, 35%);
        border-radius: 15px;
        min-width: 250px;
        max-width: 375px;
        margin: 5px;
        }

}

